--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,6 +5,30 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "dotenv>=0.9.9",
-    "fastapi[standard]>=0.116.1",
+    "annotated-types==0.7.0",
+    "anyio==4.10.0",
+    "Authlib==1.6.4",
+    "certifi==2025.8.3",
+    "cffi==2.0.0",
+    "click==8.3.0",
+    "colorama==0.4.6",
+    "cryptography==46.0.1",
+    "fastapi[standard]==0.116.2",
+    "greenlet==3.2.4",
+    "h11==0.16.0",
+    "httpcore==1.0.9",
+    "httpx==0.28.1",
+    "idna==3.10",
+    "itsdangerous==2.2.0",
+    "psycopg2-binary==2.9.10",
+    "pycparser==2.23",
+    "pydantic==2.11.9",
+    "pydantic_core==2.33.2",
+    "python-dotenv==1.1.1",
+    "sniffio==1.3.1",
+    "SQLAlchemy==2.0.43",
+    "starlette==0.48.0",
+    "typing-inspection==0.4.1",
+    "typing_extensions==4.15.0",
+    "uvicorn==0.35.0",
 ]
