--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "psycopg2-binary==2.9.10",
     "pycparser==2.23",
     "pydantic==2.11.9",
+    "pydantic-settings>=2.11.0",
     "pydantic_core==2.33.2",
     "python-dotenv==1.1.1",
     "sniffio==1.3.1",
