--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,13 @@
 annotated-types==0.7.0
 anyio==4.10.0
 Authlib==1.6.4
+bcrypt==4.3.0
 certifi==2025.8.3
 cffi==2.0.0
 click==8.3.0
 colorama==0.4.6
 cryptography==46.0.1
+ecdsa==0.19.1
 fastapi==0.116.2
 greenlet==3.2.4
 h11==0.16.0
@@ -13,11 +15,17 @@ httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
 itsdangerous==2.2.0
+passlib==1.7.4
 psycopg2-binary==2.9.10
+pyasn1==0.6.1
 pycparser==2.23
 pydantic==2.11.9
 pydantic_core==2.33.2
 python-dotenv==1.1.1
+python-jose==3.5.0
+python-multipart==0.0.20
+rsa==4.9.1
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.43
 starlette==0.48.0
