--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -42,6 +42,7 @@ services:
     volumes:
       # Mount only the source code, not the entire directory
       - ./backend/app:/app/app
+      - ./ml:/app/ml   
       - ./backend/pyproject.toml:/app/pyproject.toml
       - ./backend/uv.lock:/app/uv.lock
     environment:
