--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -32,4 +32,14 @@ dependencies = [
     "typing-inspection==0.4.1",
     "typing_extensions==4.15.0",
     "uvicorn==0.35.0",
+    # --- ML + Data Science ---
+    "pandas",
+    "numpy",
+    "scikit-learn",
+    "xgboost",
+    "seaborn",
+    "matplotlib",
+    "joblib",
+    "openpyxl",
+    "et-xmlfile"
 ]
