--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,13 +14,19 @@ h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
+iniconfig==2.3.0
 itsdangerous==2.2.0
+packaging==25.0
 passlib==1.7.4
+pluggy==1.6.0
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pycparser==2.23
 pydantic==2.11.9
+pydantic-settings==2.11.0
 pydantic_core==2.33.2
+Pygments==2.19.2
+pytest==8.4.2
 python-dotenv==1.1.1
 python-jose==3.5.0
 python-multipart==0.0.20
