--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,6 +10,8 @@ GOOGLE_CLIENT_SECRET=your_google_client_secret_here
 MICROSOFT_CLIENT_ID=your_microsoft_client_id_here
 MICROSOFT_CLIENT_SECRET=your_microsoft_client_secret_here
 
+SECRET_KEY=your_secret_key_here
+
 # Optional: Override default settings
 # DATABASE_URL=postgresql://username:password@host:port/database
 # SECRET_KEY=your_secret_key_here
