--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -36,7 +36,7 @@ services:
   backend:
     build:
       context: ./backend
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     ports:
       - "8000:8000"
     volumes:
