fix render deployment build error

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,6 +12,8 @@ MICROSOFT_CLIENT_SECRET=your_microsoft_client_secret_here
 
 SECRET_KEY=your_secret_key_here
 
+ACS_API_KEY=your_acs_api_key_here
+
 # Optional: Override default settings
 # DATABASE_URL=postgresql://username:password@host:port/database
 # SECRET_KEY=your_secret_key_here
