--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -56,5 +56,7 @@ dependencies = [
     "matplotlib==3.10.7",
     "joblib==1.5.2",
     "openpyxl==3.1.5",
-    "et-xmlfile==2.0.0"
+    "et-xmlfile==2.0.0",
+    # --- HTTP Client ---
+    "requests>=2.31.0"
 ]
