--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,11 +36,11 @@ jobs:
           cache: 'pip'  # Caches pip dependencies for faster builds
       
       - name: Install dependencies
-        working-directory: ./python-backend
+        working-directory: ./backend
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       
       - name: Run tests
-        working-directory: ./python-backend
+        working-directory: ./backend
         run: pytest
