--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,19 +28,28 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.12'  # or '3.13' if you need it
-          cache: 'pip'  # Caches pip dependencies for faster builds
-      
+          python-version: '3.12'
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          version: "0.8.17"
+
       - name: Install dependencies
         working-directory: ./backend
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      
+          uv sync --locked
+
+      - name: Create symlink for ml directory
+        working-directory: ./backend
+        run: |
+          ln -s ../ml ./ml
+
       - name: Run tests
         working-directory: ./backend
-        run: pytest
+        run: |
+          uv run pytest tests/ -v
