--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ Authlib==1.6.4
 bcrypt==4.3.0
 certifi==2025.8.3
 cffi==2.0.0
+charset-normalizer==3.4.4
 click==8.3.0
 colorama==0.4.6
 cryptography==46.0.1
@@ -31,11 +32,14 @@ pytest==8.4.2
 python-dotenv==1.1.1
 python-jose==3.5.0
 python-multipart==0.0.20
+requests==2.32.5
 rsa==4.9.1
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.43
 starlette==0.48.0
+sumologic-sdk==0.1.17
 typing-inspection==0.4.1
 typing_extensions==4.15.0
+urllib3==2.5.0
 uvicorn==0.35.0
