--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,7 @@ jobs:
       GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
       SECRET_KEY: ${{ secrets.SECRET_KEY }}
       ACS_API_KEY: ${{ secrets.ACS_API_KEY }}
+      SUMO_LOGIC_URL: ${{ secrets.SUMO_LOGIC_URL }}
       
     steps:
       - name: Checkout code
