--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -9,7 +9,7 @@ services:
       - POSTGRES_PASSWORD=citycompass
       - POSTGRES_DB=citycompass
     ports:
-      - "5432:5432"
+      - "5433:5432"
     volumes:
       - citycompass-postgres-data:/var/lib/postgresql/data
     restart: unless-stopped
@@ -42,13 +42,23 @@ services:
     volumes:
       # Mount only the source code, not the entire directory
       - ./backend/app:/app/app
-      - ./ml:/app/ml   
+      - ./ml:/app/ml
       - ./backend/pyproject.toml:/app/pyproject.toml
       - ./backend/uv.lock:/app/uv.lock
     environment:
       - PYTHONPATH=/app
       - WATCHFILES_FORCE_POLLING=true
       - DATABASE_URL=postgresql://citycompass:citycompass@db:5432/citycompass
+      - ACS_API_KEY=dummy
+      - GOOGLE_CLIENT_ID=dummy
+      - GOOGLE_CLIENT_SECRET=dummy
+      - MICROSOFT_CLIENT_ID=dummy
+      - MICROSOFT_CLIENT_SECRET=dummy
+      - OLLAMA_HOST=http://host.docker.internal:11434
+
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+
     restart: unless-stopped
     networks:
       - citycompass-network
