--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -25,7 +25,7 @@ COPY . /app
 RUN --mount=type=cache,target=/root/.cache/uv \
     uv sync --locked --no-dev
 
-RUN pip install ollama-python
+RUN pip install google-genai
 
 # Place executables in the environment at the front of the path
 ENV PATH="/app/.venv/bin:$PATH"
