--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -33,6 +33,7 @@ python-dotenv==1.1.1
 python-jose==3.5.0
 python-multipart==0.0.20
 requests==2.32.5
+resend==2.19.0
 rsa==4.9.1
 six==1.17.0
 sniffio==1.3.1
