--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -18,7 +18,9 @@ idna==3.10
 iniconfig==2.3.0
 itsdangerous==2.2.0
 logging==0.4.9.6
+numpy==2.3.5
 packaging==25.0
+pandas==2.3.3
 passlib==1.7.4
 pluggy==1.6.0
 psycopg2-binary==2.9.10
@@ -29,9 +31,11 @@ pydantic-settings==2.11.0
 pydantic_core==2.33.2
 Pygments==2.19.2
 pytest==8.4.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-jose==3.5.0
 python-multipart==0.0.20
+pytz==2025.2
 requests==2.32.5
 resend==2.19.0
 rsa==4.9.1
@@ -42,5 +46,6 @@ starlette==0.48.0
 sumologic-sdk==0.1.17
 typing-inspection==0.4.1
 typing_extensions==4.15.0
+tzdata==2025.3
 urllib3==2.5.0
 uvicorn==0.35.0
