--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -49,3 +49,11 @@ typing_extensions==4.15.0
 tzdata==2025.3
 urllib3==2.5.0
 uvicorn==0.35.0
+pandas>=2.0.0
+numpy>=1.23.0
+scikit-learn>=1.2.0
+xgboost>=2.0.0
+matplotlib>=3.7.0
+seaborn>=0.12.0
+joblib>=1.3.0
+openpyxl>=3.1.0
