--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -58,5 +58,7 @@ dependencies = [
     "openpyxl==3.1.5",
     "et-xmlfile==2.0.0",
     # --- HTTP Client ---
-    "requests>=2.31.0"
+    "requests>=2.31.0",
+    "langchain>=1.2.0",
+    "langchain-openai>=1.1.6",
 ]
