--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -57,3 +57,7 @@ matplotlib>=3.7.0
 seaborn>=0.12.0
 joblib>=1.3.0
 openpyxl>=3.1.0
+# LangChain AI Agent
+langchain>=1.2.0,
+langchain-openai>=1.1.6,
+langgraph>=1.0.0
