--- a/citycompass/package.json
+++ b/citycompass/package.json
@@ -29,6 +29,7 @@
     "react-dom": "19.2.1",
     "react-hook-form": "^7.65.0",
     "react-leaflet": "^5.0.0",
+    "react-markdown": "^10.1.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
   },
